# kit_big_data

./: .gitattributes  .gitignore  Branche_Maël.py  README.md  Reduction_de_dimension_app.py  mangetamain.ipynb  popular_recipes.csv  project_viz.ipynb  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: conf.py  index.rst  make.bat  makefile
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
src/kit_big_data/: RAW_recipes_reduced.csv  app.py  data_processing.ipynb  interactions.csv  project viz.ipynb  recipes.csv  second_method_comparison_deployment.csv  transformed_recipes.csv  transformed_recipes_deployment.csv  utils.py
src/kit_big_data/pages/: All_Recipes.py  Popular_Recipes.py  Reduction_de_dimension_app.py  generated_name_app.py  second_method_comparison_deployment.csv  transformed_recipes_deployment.csv  x Bonus.py
tests/: .coverage  test_app.py  test_data_processing.py
